# diagware

./: .gitignore  Cargo.toml  README.md  doc.md  install.sh  up.sh
.cargo/: config.toml
.github/workflows/: rust.yml
02_Documentation/24.25_DA_Docu_Template_1/: 00_Anleitungsfiles_sind_in_den_Ordnern.txt
02_Documentation/24.25_DA_Docu_Template_1/00_LATdef/: DocSettings.tex  UsePackages.tex
02_Documentation/24.25_DA_Docu_Template_1/02_DOC_Main/: 24.25_DA_DaName_Template_main_0.aux  24.25_DA_DaName_Template_main_0.bbl  24.25_DA_DaName_Template_main_0.blg  24.25_DA_DaName_Template_main_0.tex  24.25_DA_DaName_Template_main_0.toc  DA_01_INTroduction.tex  DA_03_ADDendum.tex  DA_04_ACR.tex  DA_05_LitVerzeichnis.bib
02_Documentation/24.25_DA_Docu_Template_1/02a_DOC_DPL1/: DA_Diplomand_1.aux  DA_Diplomand_1.dvi  DA_Diplomand_1.tex
02_Documentation/24.25_DA_Docu_Template_1/02b_DOC_DPL2/: DA_Diplomand_2.aux  DA_Diplomand_2.tex
legacy/: Cargo.toml  database.db  ui.rs
legacy/.cargo/: config.toml
legacy/db_scripts/: setup.sql
legacy/src/: db.rs  dds.rs  shift_reg.rs  ui.rs
legacy/src/db/: model.rs
legacy/src/ui/: gui.rs  (+2 more)
legacy/ui/: config.rs
src/: config.rs  database.db  db.rs  db.rs.bak  dds.rs  diagnosis.rs  eeprom.rs  error.rs  io.rs  logger.rs  main.rs  old_diagnosis.rs  shift_reg.rs  transfer.rs  ui.rs  ui.rs.bak  util.rs  xfer.rs
src/db/: model.rs
src/db_scripts/: default.sql  examples.sql  setup.sql
src/io/: adc.rs  dds.rs  eeprom.rs  shift_reg.rs
src/sql_scripts/: setup.sql
src/ui/: components.rs  config.rs  gui.rs  logger.rs  util.rs
(+39 files in other folders)
