[package]
name = "diagware-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
eframe = "0.29.1"
egui = "0.29.1"
egui-modal = "0.5.0"
egui-phosphor = "0.7.3"
egui_extras = { version = "0.29.1", features = [ "image", "file" ] }
local-ip-address = "0.6.3"
rppal = "0.19.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "full"] }
whoami = "1.5.2"
