[package]
name = "diagware-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
eframe = "0.30.0"
egui = "0.30.0"
egui-phosphor = "0.8.0"
egui_extras = { version = "0.30.0", features = [ "image", "file" ] }
egui_file = "0.20.0"
emath = "0.30.0"
local-ip-address = "0.6.3"
rppal = "0.22.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
thiserror = "2.0.6"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "full"] }
whoami = "1.5.2"
